<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uce.edu.web.api</groupId>
    <artifactId>pw_api_auth_u4_p9_mg</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.31.1</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

        <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-jsonb</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-resteasy</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-jwt-build</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <!--Nuevas dependencias-->
        <dependency>
    <groupId>io.quarkus</groupId>
    <artifactId>quarkus-resteasy-jsonb</artifactId>
</dependency>

<dependency>
    <groupId>io.quarkus</groupId>
    <artifactId>quarkus-resteasy-client-jackson</artifactId>
</dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                            <goal>native-image-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
    </profiles>
</project>

<!-- VUE -->
<!-- <router-view /> -->
<!-- padre -->
<!-- <component-1 :bandera="banderaValue" /> -->
<!-- <component-2 @evento="banderaValue = $event"/> -->
<!-- data() {return {banderaValue: null} -->
<!-- hijo 1 -->
<!-- <button @click="emitEvent">Emit Event</button> -->
<!-- emitEvent() {setTimeout(() =>{this.$emit('evento', false);},1000)this.$emit('evento', true);}; -->
<!-- hijo 2 -->
<!-- props: {bandera :{type: Boolean,default: null}} -->
<!-- guardianes -->
<!-- meta: {requiereAutorizacion: true} -->
<!-- router.beforeEach((to, from, next)=>{if(to.meta.requiereAutorizacion){next({name:'login'});}}) -->
<!-- header -->
<!-- {headers:{Authorization: `Bearer ${TOKEN}`}} -->

<!-- QUARKUS -->
<!-- @OneToOne(cascade = CascadeType.ALL, fetch = FetchType.LAZY) -->
<!-- @JoinColumn(name = "curso_id") -->
<!-- @OneToOne(mappedBy = "cursos") -->

<!-- @OneToMany(mappedBy = "estudiante",cascade = CascadeType.ALL, fetch = FetchType.LAZY) -->
<!-- @ManyToOne(fetch = FetchType.LAZY)@JoinColumn(name = "estudiante_id") -->

<!-- @ManyToMany -->
<!-- @JoinTable(name = "estudiante_curso", joinColumns = @JoinColumn(name = "estudiante_id"), inverseJoinColumns = @JoinColumn(name = "curso_id")) -->
<!-- @ManyToMany(mappedBy = "cursos") -->

<!-- @JsonbTransient -->

<!-- @SequenceGenerator(name = "estudiante_sec", sequenceName = "cliente_secuencia",allocationSize = 1) -->
<!-- @GeneratedValue(strategy = GenerationType.SEQUENCE,generator = "estudiante_sec") -->

<!-- return find("username", username).firstResult(); porNombre -->

<!-- return find("estudiante.id", idEstudiante).list(); hijos -->

<!-- @Context private UriInfo uriInfo;  -->
<!-- String hijos = this.uriInfo.getBaseUriBuilder().path(EstudianteResource.class).path(String.valueOf(er.getId())).path("hijos").build().toString(); -->
<!-- er.setLink(List.of(new LinkDto(hijos, "hijos"))); -->
<!-- return er; -->
<!-- npm create vue@latest -->
<!-- yes, nombre del proyecto, vistest, Router enter enter, npm run serve-->
<!-- .\mvnw.cmd quarkus:dev -->
<!-- ResEasy Classic, Json B, hibernate orm jcbc iver -->
<!--npx @vue/cli create nombre-proyecto-->